--- a/media.html
+++ b/media.html
@@ -6,11 +6,21 @@
     <title>Document</title>
     <style>
         body{
-            background-color: aqua;
+            background-color: rgb(4, 237, 159);
+        }
+        @media(max-width:1000px){
+            body{
+                background-color: rgb(5, 214, 251);
+            }
+        }
+        @media(max-width:600px){
+            body{
+                background-color: blueviolet;
+            }
         }
     </style>
 </head>
 <body>
-    
+    <script src="JavaScript/script.js"></script>
 </body>
 </html>
